syntax = "proto3";

option go_package = "github.com/bruce-mig/pricefetcher-grpc-microservices";

service PriceFetcher {
    rpc FetchPrice(PriceRequest) returns (PriceResponse);
    rpc FetchPriceServerStreaming(SymbolsList) returns (stream PriceResponse);
}

message PriceRequest {
    string symbol = 1;
}


message PriceResponse {
    string symbol = 1;
    string name = 2;
    string datetime = 3;
    string close = 4;
    string percent_change = 5;
}


message SymbolsList{
    repeated PriceRequest symbols = 1;
}